# moole-sast-benchmark-java-python-js

./: .env.node.example  README.md  VULNERABILITIES.md  package.json  requirements.txt
java-app/: pom.xml
java-app/src/main/java/com/infigroup/vulnapp/: VulnAppApplication.java
java-app/src/main/java/com/infigroup/vulnapp/config/: AppConfig.java
java-app/src/main/java/com/infigroup/vulnapp/controller/: AdminController.java  SearchController.java  (+1 more)
java-app/src/main/resources/: application.properties
javascript-app/: README.md
javascript-app/src/: server.js
javascript-app/src/middleware/: auth.js
javascript-app/src/routes/: files.js
javascript-app/src/services/: commandService.js  cryptoUtils.js
python-app/: .env.example  README.md  pyproject.toml
python-app/src/vulnapp/: __init__.py  app.py  config.py
python-app/src/vulnapp/routes/: auth.py
python-app/src/vulnapp/services/: crypto_utils.py  user_service.py
src/: config.js  db.js
src/main/java/com/infigroup/vulnapp/controller/: FileController.java
src/main/java/com/infigroup/vulnapp/repository/: UserRepository.java
src/main/java/com/infigroup/vulnapp/service/: CommandService.java  CryptoService.java  UserService.java
src/main/java/com/infigroup/vulnapp/util/: SerializationUtil.java
src/main/resources/: schema.sql
src/routes/: auth.js  search.js  users.js
src/services/: userService.js
src/vulnapp/: db.py
src/vulnapp/routes/: files.py  users.py
src/vulnapp/services/: report_service.py
src/vulnapp/templates/: profile.html
test/: smokes.test.js
tests/: test_smoke.py
(+1 files in other folders)
