[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnapp"
version = "1.0.0"
description = "Intentionally vulnerable Flask application for SAST benchmarking"
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.0.0",
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
    "lxml>=5.0.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]
